test+push, fix bug layout dang nhap dang ky

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity android:name=".activities.LoginAct"
             android:exported="true"/>
 
+        <activity android:name=".activities.RegisterAct"
+            android:exported="true"/>
+
         <activity android:name=".activities.SplashAct"
             android:exported="true">
             <intent-filter>
